# Oreforged

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  build.bat  package_release.ps1
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  COMPONENTS.md  DATA_BINDING.md  OREUI.md  README.md  _config.yml
docs/implementation_plans/: roguelite_progression.md
release/ui/: index.html
release/ui/assets/: index-R8ozGLHe.js
src/: Game.cpp  Game.h  main.cpp
src/world/: Block.h  Chunk.cpp  Chunk.h  World.cpp  World.h
ui/: index.html  inline-build.cjs  package.json  pnpm-lock.yaml  vite.config.ts
ui/src/: App.tsx  main.tsx  temp_legacy.tsx
ui/src/components/: Input.tsx  Slider.tsx  Toggle.tsx
ui/src/design/: tokens.ts
ui/src/engine/: ErrorBoundary.tsx  bridge.ts  components.tsx  hooks.ts
ui/src/engine/renderer/: useCameraControls.ts  useChunkRenderer.ts  useInteraction.ts  useThreeSetup.ts
ui/src/game/: ChunkMesh.ts  VoxelRenderer.tsx  blocks_texture.ts
ui/src/game/data/: Config.ts  Facets.ts  GameDefinitions.ts
ui/src/game/effects/: DamageNumberOverlay.tsx  HitParticles.ts  PositiveBurstOverlay.tsx
ui/src/game/systems/: OreHealthSystem.ts
ui/src/game/ui/: CalibrationSequence.tsx  CurrentToolDisplay.tsx  GameHUD.tsx  HUD.tsx  ObjectiveTracker.tsx  PositiveBurstOverlay.tsx  RegenOverlay.tsx  ResourceManifest.tsx  ScanlineOverlay.tsx  ToastNotification.tsx  (+3 more)
ui/src/layouts/: GameLayout.tsx
ui/src/oreui/: Button.tsx  FloatingText.tsx  Input.tsx  Panel.tsx  ProgressBar.tsx  Slider.tsx  TitleCard.tsx  Toggle.tsx  ToolStatus.tsx
(+2 files in other folders)
